# sotn-decomp

./: %.map  .clang-format  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  DockerfileSetup  Makefile  Makefile.pc.mk  Makefile.psp.mk  Makefile.psx.mk  Makefile.saturn.mk  Makefile.tools.mk  README.md  asset-manifest.json  checksum.md5  diff_settings.py  dra.sha  duplicates.txt  function_graphs.md  functions.md  functions_saturn.md  go.work  go.work.sum  index.html  macro.inc  main.sha  no0_Makefile  no0_Makefile.psx.mk  package-lock.json  package.json  player.ld  psp-make-config.py  setup.sh  slus00067.sha  sotn.sh  (+4 more)
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: deploy.yml  dockerfile.yaml  format.yml  linter.yaml  mod-mariapsp-forpsx.yaml  picci.yaml  report.yml  saturn-build.yml  tool-debugmodule.yaml  tools.yaml  validate-and-report.yml  validate.yml
cmake/: FindSDL2.cmake  gen_export_def.cmake
config/: .gitignore  assets.hd.yaml  assets.pspeu.yaml  assets.us.weapon.yaml  assets.us.yaml  check.hd.sha  check.pspeu.sha  check.saturn.sha  check.us.sha  dirt.us.json  gfx.game.json  merge.dra.txt  merge.lib.txt  merge.st0.txt  merge.wrp.txt  slus00067.lba  splat.dra.yaml  splat.hd.dra.yaml  splat.hd.fname.yaml  splat.hd.ric.yaml  splat.hd.sd.yaml  splat.hd.stare.yaml  splat.hd.stcen.yaml  splat.hd.stnp3.yaml  splat.hd.strwrp.yaml  splat.hd.stwrp.yaml  splat.hd.tt_000.yaml  splat.main.yaml  splat.pspeu.bobo0.yaml  splat.pspeu.bobo4.yaml  splat.pspeu.bobo6.yaml  splat.pspeu.borbo0.yaml  splat.pspeu.dra.yaml  splat.pspeu.main.yaml  splat.pspeu.maria.yaml  splat.pspeu.ric.yaml  splat.pspeu.stare.yaml  splat.pspeu.stcat.yaml  splat.pspeu.stcen.yaml  splat.pspeu.stchi.yaml  (+244 more)
config/saturn/: alucard.ld  alucard.prg.yaml  alucard_user_syms.txt  check.game.prg.sha  check.saturn.sha  check.t_bat.prg.sha  check.zero.bin.sha  game.ld  game.prg.yaml  game_user_syms.txt  maria.ld  maria.prg.yaml  maria_user_syms.txt  richter.ld  richter.prg.yaml  richter_user_syms.txt  stage_02.ld  stage_02.prg.yaml  stage_02_user_syms.txt  t_bat.ld  t_bat.prg.yaml  t_bat_user_syms.txt  warp.ld  warp.prg.yaml  warp_syms.txt  warp_user_syms.txt  zero.bin.yaml  zero.ld  zero_user_syms.txt
disks/: README
dlltest/: CMakeLists.txt  dll.c  main.c
docs/: NAMING.md  STYLE.md
function_calls/: index.html
include/: animset.h  bios.h  castle.h  castle_flags.h  cloud_struct.h  clut.h  collider.h  common.h  cutscene.h  demo.h  disk.h  dra.h  drawmode.h  entity.h  entity_new.h  familiar.h  flags.h  game.h  game_psp.h  gamepad.h  gamesettings.h  gapi.h  graphics.h  gstate.h  gte.inc  gte_macros.inc  include_asm.h  include_asm.inc  input.h  item.h  items.h  labels.inc  layer.h  lba.h  lba_hd.h  lba_us.h  log.h  macro.inc  macros.h  main.h  (+26 more)
include/pspsdk/: pspatrac3.h  pspctrl.h  pspgecmd.h  pspgu.h  pspirkeyb.h  pspirkeyb_rawkeys.h  psploadexec.h  pspmpeg.h  pspthreadman.h  psptypes.h  pspumd.h  psputility.h  psputility_msgdialog.h  psputility_netconf.h  psputility_osk.h  psputility_savedata.h  psputility_sysparam.h
include/psxsdk/: kernel.h  libapi.h  libc.h  libcard.h  libcd.h  libetc.h  libgpu.h  libgs.h  libgte.h  libsnd.h  libspu.h  romio.h  stdarg.h
include/saturn/: scl.h
include/st/: AnimateEntity.h
mods/maria-psx/: Makefile  maria.c
mods/mariapsp-forpsx/: Dockerfile  Makefile  maria.c  symexport.txt
public/: index.html  manifest.json
src/: .gitignore  App.css  App.js  App.tsx  Chart.js  ChartsVersion.js  LICENSE  alloc_entity.h  config_us.h  decelerate.h  destroy_entities_from_index.h  destroy_entity.h  gamemeta.js  get_free_entity.h  get_lang.h  index.css  main.tsx  rebound_stone.h  save_mgr.h  save_mgr2.h  save_mgr3.h  save_mgr_pre.h  set_prim_rect.h  set_speed_x.h  set_textured_prim_rect.h  styles.css
src/boss/: .gitignore  dop_anim.h  dop_check_st_collision.h  dop_collision.h  dop_floor.h  doppleganger.h
src/components/: ProgressTable.tsx
src/data/: builds.ts
src/dra/: 42398.c  44124.c  45358.c  46358.c  46FD4.c  47384.c  4768C.c  47BB8.c  4A538.c  4AEA4.c  4B758.c  4CE2C.c  4DA70.c  4F45C.c  5087C.c  52860.c  5298C.c  5D5BC.c  5D6C4.c  5D7C0.c  5D874.c  5F60C.c  624DC.c  627C4.c  628AC.c  62D70.c  62DEC.c  62EB8.c  63ED4.c  66590.c  68448.c  692E8.c  6BF64.c  6D584.c  6D59C.c  6DF70.c  6E42C.c  6FDF8.c  70394.c  704D0.c  (+78 more)
src/dra_psp/: 10340.c  10990.c  10BF0.c  111F0.c  11C50.c  12820.c  12A00.c  12E00.c  13080.c  13BD0.c  14490.c  14F30.c  151E0.c  15280.c  15300.c  15360.c  15520.c  160C0.c  18210.c  18648.c  186E8.c  18800.c  18920.c  18BA0.c  18BE0.c  199E8.c  19AB0.c  1A0D0.c  1A110.c  1A1A0.c  1AD50.c  1BF70.c  1C030.c  1DCE0.c  1DDC0.c  1E1B0.c  1E50.c  20560.c  22A40.c  23138.c  (+151 more)
src/lib/: decompDev.ts  overlays.ts
src/main/: 5A38.c  5E78.c  7190.c  72A4.c  first_c_file.c  main.c
src/main_psp/: 10064.c  10944.c  11320.c  138B0.c  16F4.c  181DC.c  18334.c  18680.c  189D8.c  18BC.c  18ED0.c  192C0.c  1A794.c  1B0F0.c  1B61C.c  1BCFC.c  1BD9C.c  1C40.c  1C74.c  1D14.c  2312C.c  24308.c  26888.c  2758C.c  277E8.c  280FC.c  28A90.c  29F0.c  2B69C.c  2D608.c  2EF0C.c  3030.c  31178.c  31E8.c  340E0.c  35670.c  36174.c  (+31 more)
tools/: .gitignore  analyze_calls.py  auto_dedupe_new_overlay.py  bin2c.py  check_format.py  data_tracer.py  decompile.py  dirt_patcher.py  display_animation.py  display_animset_frames.py  display_texture.py  extract_overlay.py  find_duplicates.py  function_finder.py  function_finder_saturn.py  function_finder_us.py  gfxstage.py  lint-license.py  list_ovl_files.py  m2ctx.py  make-config.py  mwcpp.py  mwcpp_test.py  permuter_settings.toml  play_animation.py  png2bin.py  png2s.py  progress.py  pspas.py  report_progress.py  requirements-debian.txt  requirements-python.txt  richter_symbols.py  score_functions.py  sotn-str.py  sotn_diff.py  split_jpt_yaml.py  spritesheet.py  symbols.py  symbols_test.py  (+2 more)
tools/ghidra/symbols/: Cargo.toml  run.sh
tools/ghidra/symbols/src/: main.rs
tools/ghidra/symbols/test/: empty.c  pointer_args.c
tools/pspas/: Cargo.toml
tools/pspas/src/: main.rs
(+4898 files in other folders)
